prevent pageback on horizontal scroll

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  overscroll-behavior-x: contain; /* https://stackoverflow.com/questions/50616221/prevent-page-navigation-on-horizontal-scroll https://www.chromestatus.com/feature/5734614437986304 */
 }
 
 .canvas {
